--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,11 +1,31 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.6
+targetCompatibility = 1.7
+sourceCompatibility = 1.7
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
+/*
 sourceSets.main.java.srcDirs = [ "src/" ]
+*/
 
+sourceSets {
+    main {
+        java {
+            srcDirs= ["src/"]
+        }
+        resources {
+            srcDirs= ["res/"]
+        }
+    }
+}
 
 eclipse.project {
     name = appName + "-core"
+}
+
+
+
+dependencies {
+    // https://mvnrepository.com/artifact/org.jdom/jdom2
+    compile group: 'org.jdom', name: 'jdom2', version: '2.0.6'
 }
