--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.mateu.gamemaker" >
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="27" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="26" />
+
+    <uses-permission android:name="android.permission.VIBRATE" ></uses-permission>
 
     <application
         android:allowBackup="true"
